engine-net-2/tests/negative/NegInNeg.gm
node class IN {
  val:int;
}

edge class E1;
edge class E2;
